[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_aggregation_service"
version = "0.20.0"
description = "Search result aggregation service for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>"]
readme = "README.md"
packages = [{include = "bento_aggregation_service"}]
repository = "https://github.com/bento-platform/bento_aggregation_service"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10.0"
bento-lib = {extras = ["fastapi"], version = "^12.4.1"}
fastapi = {extras = ["standard"], version = "^0.115.11"}
pydantic-settings = "^2.1.0"
aiohttp = "^3.10.11"
pydantic = "^2.6.1"
structlog = "^25.1.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
debugpy = "^1.8.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
tox = "^4.11.3"
httpx = "^0.27.0"
ruff = "^0.9.10"

[tool.ruff]
line-length = 120
