[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bento_aggregation_service"
version = "0.21.0"
description = "Search result aggregation service for the Bento platform."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>"]
readme = "README.md"
packages = [{include = "bento_aggregation_service"}]
repository = "https://github.com/bento-platform/bento_aggregation_service"
license = "LGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.12.0"
bento-lib = {extras = ["fastapi"], version = "^14.0.1"}
fastapi = {extras = ["standard"], version = "^0.121.0"}
pydantic-settings = "^2.11.0"
aiohttp = "^3.13.1"
pydantic = "^2.12.3"
structlog = "^25.4.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.11.0"
debugpy = "^1.8.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
tox = "^4.31.0"
httpx = "^0.28.1"
ruff = "^0.14.1"

[tool.ruff]
line-length = 120
